# lungair-desktop-application

./: .flake8  .gitignore  .pre-commit-config.yaml  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-requirements.txt  useful-requirements.txt
.github/workflows/: docker.yml  pre-commit.yml
Applications/: CMakeLists.txt
Applications/LungAIRApp/: CMakeLists.txt  Main.cxx  qLungAIRAppMainWindow.cxx  qLungAIRAppMainWindow.h  qLungAIRAppMainWindow_p.h  slicer-application-properties.cmake
Applications/LungAIRApp/Resources/: export_logo.sh
Applications/LungAIRApp/Resources/Icons/: DesktopIcon.icns
Applications/LungAIRApp/Widgets/: qAppStyle.cxx  qAppStyle.h
Modules/Scripted/Home/: CMakeLists.txt  Home.py
Modules/Scripted/Home/HomeLib/: constants.py  dependency_installer.py  deploy_app.py  eicu.py  image_utils.py  monai_installer.py  plots.py  segmentation_model.py  segmentation_post_processing.py  xray.py
Modules/Scripted/Home/Resources/: Home.qss  lungair_layout.xml
Modules/Scripted/Home/Resources/Schema/eICU/: README.txt  patient.txt  respiratoryCareSchema.txt  respiratoryCharting.txt
